// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expertData: After connected and logged in 1`] = `
Array [
  <div
    className="background"
  >
    <div
      className="autoSizer"
    >
       
      <div
        className="gameFieldContainer"
        style={
          Object {
            "minHeight": 200,
            "minWidth": 400,
          }
        }
      >
        <div
          className="line"
          style={
            Object {
              "height": 200,
              "left": 150,
            }
          }
        />
        <div
          className="line"
          style={
            Object {
              "height": 200,
              "left": 250,
            }
          }
        />
        <div
          style={
            Object {
              "backgroundColor": "white",
              "height": 200,
              "left": 150,
              "position": "absolute",
              "width": 100,
            }
          }
        />
      </div>
       
    </div>
  </div>,
  <div
    className="backgroundOverlay"
  >
    <div
      className="backgroundOverlayContent"
    >
      <div>
        Hello 
        TESTUSER
        ! Thanks for willing to participate in my experiment. You can cancel and continue at any time, your progress will be right where you left off :)
        
        <a
          className="overlayButton flex alignCenter blueGradient"
          style={
            Object {
              "width": 146.66666666666666,
            }
          }
        >
          <span
            className="flex alignCenter pullIconLeft"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 640 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M480 96H160C71.6 96 0 167.6 0 256s71.6 160 160 160c44.8 0 85.2-18.4 114.2-48h91.5c29 29.6 69.5 48 114.2 48 88.4 0 160-71.6 160-160S568.4 96 480 96zM256 276c0 6.6-5.4 12-12 12h-52v52c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-52H76c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h52v-52c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h52c6.6 0 12 5.4 12 12v40zm184 68c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48zm80-80c-26.5 0-48-21.5-48-48s21.5-48 48-48 48 21.5 48 48-21.5 48-48 48z"
              />
            </svg>
          </span>
          <span
            className="flex1 justifyCenter"
          >
            Play
          </span>
        </a>
      </div>
    </div>
  </div>,
]
`;

exports[`expertData: After connected but need login 1`] = `
Array [
  <div
    className="background"
  >
    <div
      className="autoSizer"
    >
       
      <div
        className="gameFieldContainer"
        style={
          Object {
            "minHeight": 200,
            "minWidth": 400,
          }
        }
      >
        <div
          className="line"
          style={
            Object {
              "height": 200,
              "left": 150,
            }
          }
        />
        <div
          className="line"
          style={
            Object {
              "height": 200,
              "left": 250,
            }
          }
        />
        <div
          style={
            Object {
              "backgroundColor": "white",
              "height": 200,
              "left": 150,
              "position": "absolute",
              "width": 100,
            }
          }
        />
      </div>
       
    </div>
  </div>,
  <div
    className="backgroundOverlay"
  >
    <div
      className="backgroundOverlayContent"
    >
      <div>
        You are not logged in yet.
        But the page is still loading so this will probably be done in a jiffy!
      </div>
    </div>
  </div>,
]
`;

exports[`expertData: After connected during login 1`] = `
Array [
  <div
    className="background"
  >
    <div
      className="autoSizer"
    >
       
      <div
        className="gameFieldContainer"
        style={
          Object {
            "minHeight": 200,
            "minWidth": 400,
          }
        }
      >
        <div
          className="line"
          style={
            Object {
              "height": 200,
              "left": 150,
            }
          }
        />
        <div
          className="line"
          style={
            Object {
              "height": 200,
              "left": 250,
            }
          }
        />
        <div
          style={
            Object {
              "backgroundColor": "white",
              "height": 200,
              "left": 150,
              "position": "absolute",
              "width": 100,
            }
          }
        />
      </div>
       
    </div>
  </div>,
  <div
    className="backgroundOverlay"
  >
    <div
      className="backgroundOverlayContent"
    >
      <div>
        You are not logged in yet.
        But the page is still loading so this will probably be done in a jiffy!
      </div>
    </div>
  </div>,
]
`;

exports[`expertData: After fetched active game 1`] = `
<div>
  <div
    className="gameFieldContainer"
    style={
      Object {
        "minHeight": 768,
        "minWidth": 1024,
      }
    }
  >
    <div
      className="line"
      style={
        Object {
          "height": 768,
          "left": 322,
        }
      }
    />
    <div
      className="line"
      style={
        Object {
          "height": 768,
          "left": 702,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "white",
          "height": 768,
          "left": 322,
          "position": "absolute",
          "width": 380,
        }
      }
    />
    <div
      className="POSEDIV"
    >
      <div
        className="block"
        style={
          Object {
            "backgroundColor": "#000",
            "bottom": 0,
            "left": 0,
            "minHeight": 38,
            "minWidth": 38,
          }
        }
      >
        <div
          className="middleCircle"
          style={
            Object {
              "minHeight": 33,
              "minWidth": 33,
            }
          }
        />
      </div>
      <div
        className="block"
        style={
          Object {
            "backgroundColor": "#000",
            "bottom": 0,
            "left": 38,
            "minHeight": 38,
            "minWidth": 38,
          }
        }
      />
      <div
        className="block"
        style={
          Object {
            "backgroundColor": "#000",
            "bottom": 38,
            "left": 0,
            "minHeight": 38,
            "minWidth": 38,
          }
        }
      />
      <div
        className="block"
        style={
          Object {
            "backgroundColor": "#000",
            "bottom": 38,
            "left": 38,
            "minHeight": 38,
            "minWidth": 38,
          }
        }
      />
    </div>
  </div>
</div>
`;
